k8s-config/overlays/production/ing-puzzle.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
  labels:
    app: acend-website
  name: acend-website-puzzle
spec:
  rules:
  - host: acend-website.k8s.puzzle.ch
    http:
      paths:
      - backend:
          serviceName: acend-website
          servicePort: 8080
  tls:
  - hosts:
    - acend-website.k8s.puzzle.ch
