k8s-config/overlays/production/ing-www.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: acend-letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains";
      more_set_headers "Content-Security-Policy: default-src 'self' https://*.acend.ch";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Referrer-Policy: no-referrer-when-downgrade";
      more_set_headers "Permissions-Policy: accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
  labels:
    app: acend-website
  name: acend-website-www
spec:
  rules:
  - host: www.acend.ch
    http:
      paths:
      - backend:
          serviceName: acend-website
          servicePort: 8080
  tls:
  - hosts:
      - www.acend.ch
    secretName: www-acend-ch
